--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="images/qr-code.png" alt="QR CODE">
+    <img src="images/image-qr-code.png" alt="QR CODE">
     <h3>Melhore suas habilidades de frontend construindo projetos</h3>
     <p>Escaneie o código QR para visitar Mentor Frontend e eleve suas habilidades de programação ao próximo nível</p>
   </div>
